--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <p class="paragraph">Social Media</p>
             <div class="links">
-            <a class="footer-link" href="www.linkedin.com/in/AK1505"><img src="linked in.png" alt="" width="50" height="50"></a>
+            <a class="footer-link" href="www.linkedin.com/in/arun1505"><img src="linked in.png" alt="" width="50" height="50"></a>
             <a class="footer-link" href="https://www.instagram.com/invites/contact/?i=1bqaiqph73xnk&utm_content=9xg2an8"><img src="instagram-icon_1057-2227.jpg" alt="" width="50" height="50"></a>
             
         </div>
