--- a/Avengers.html
+++ b/Avengers.html
@@ -10,9 +10,9 @@
             <h1>Phase 1</h1>
             <tr>
                 <td><a href="https://mdisk.me/convertor/40x17/MvaLgq"><img src="ironman1.jpg" alt="Ironman 1" width="200" height="350"></a></td>
-                <td><a href="https://mdisk.me/convertor/40x17/mQ5F1k"><img src="the incridible hulk.jpg" alt="The Incridible Hulk" width="200" height="350"></a></td>
+                <td><a href="https://mdisk.me/convertor/40x17/mQ5F1k"><img src="download.jfif" alt="The Incridible Hulk" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/40x17/Cb8rxw"><img src="ironman3.jpg" alt="Ironman 2" width="200" height="350"></a></td>
-                <td><a href="https://mdisk.me/convertor/40x17/KUhtxk"><img src="thor1.jpg" alt="Thor" width="200" height="350"></a></td>
+                <td><a href="https://mdisk.me/convertor/40x17/KUhtxk"><img src="Thor.jfif" alt="Thor" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/40x17/MD15Z0"><img src="CaptainAmericaTheFirstAvenger.jpg" alt="Captian America: First Avenger" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/16x9/viDyB5"><img src="Avengers.jpg" alt="The Avengers" width="200" height="350"></a></td>
             </tr>
@@ -21,11 +21,11 @@
             <h1>Phase 2</h1>
             <tr>
             <td><a href="https://mdisk.me/convertor/640x267/6OTHs7"><img src="ironman2.jpg" alt="Ironman 3" width="200" height="350"></a></td>
-            <td><a href="https://mdisk.me/convertor/160x67/gTWRzY"><img src="thor2.jpg" alt="Thor: the dark world" width="200" height="350"></a></td>
+            <td><a href="https://mdisk.me/convertor/160x67/gTWRzY"><img src="Thor_ The Dark World.jfif" alt="Thor: the dark world" width="200" height="350"></a></td>
             <td><a href="https://mdisk.me/convertor/160x67/2dEi6f"><img src="CaptainAmericaTheWinterSoldier.jpg" alt="Captian America: The Winter Soilder" width="200" height="350"></a></td>
             <td><a href="https://mdisk.me/convertor/160x67/RzuVl9"><img src="GuardiansOfTheGalaxy.jpeg" alt="Guardians of the Galexy" width="200" height="350"></a></td>
             <td><a href="https://mdisk.me/convertor/160x67/feQaEk"><img src="AvengersAgeOfUltron.jpg" alt="Ant man" width="200" height="350"></a></td>
-            <td><a href="https://mdisk.me/convertor/320x173/OfZgVe"><img src="AntMan1.jpg" alt="AntMan And the WASAP" width="200" height="350"></a></td>
+            <td><a href="https://mdisk.me/convertor/320x173/OfZgVe"><img src="Superhero Posters We Love.jfif" alt="AntMan And the WASAP" width="200" height="350"></a></td>
             </tr>
             </table>
         <table>
@@ -35,7 +35,7 @@
                 <td><a href="https://mdisk.me/convertor/640x267/1gxX68"><img src="DoctorStrange.jpg" alt="Doctor Strange" width="200" height="350"></a></td>  
                 <td><a href="https://mdisk.me/convertor/640x267/x5C4Zm"><img src="GuardiansOfTheGalaxy2.jpg" alt="Guardians Of The Galaxy: vol.2" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/640x267/S7xR0S"><img src="homecoming.jpg" alt="Spider-Man: Home Coming" width="200" height="350"></a></td>
-                <td><a href="https://mdisk.me/convertor/640x267/PSLnFn"><img src="ThorRagnarok.jpg" alt="Thor Ragnarok" width="200" height="350"></a></td>
+                <td><a href="https://mdisk.me/convertor/640x267/PSLnFn"><img src="Thor on the RagnarRocks Cocktail.jfif" alt="Thor Ragnarok" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/640x267/JdBojL"><img src="BlackPanther.jpg" alt="Black Panther" width="200" height="350"></a></td>   
             </tr>
             <tr>
@@ -49,12 +49,12 @@
         <table>
             <h1>Phase 4</h1>
             <tr>
-                <td><a href=""><img src="wanda vision.jpg" alt="Wanda Vision" width="200" height="350"></a></td>
+                <td><a href=""><img src="wandavision poster.jfif" alt="Wanda Vision" width="200" height="350"></a></td>
                 <td><a href=""><img src="falcon and winterSoldier.jpg" alt="Falcon and WinterSoldier" width="200" height="350"></a></td>
                 <td><a href=""><img src="lokie.jpg" alt="Lokie:Season 1" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/360x151/iH2EIC"><img src="black widow.jpg" alt="Black Widow" width="200" height="350"></a></td>
                 
-                <td><a href=""><img src="what if.jpg" alt="What if?..." width="200" height="350"></a></td>
+                <td><a href=""><img src="what if.jpg" alt="Marvel Studios on Twitter.jfif" width="200" height="350"></a></td>
                 <td><a href="https://mdisk.me/convertor/160x67/Lpn4Jx"><img src="shang-chi.jpg" alt="Shang-Chi" width="200" height="350"></a></td>
             </tr>
             <tr>
@@ -66,7 +66,7 @@
                 <td><a href="https://mdisk.me/convertor/160x67/Pfr1fX"><img src="love and thunder.jpg" alt="Thor: Love and Thunder" width="200" height="350"></a></td>
             </tr>
             <td><a href=""><img src="i am groot.jpg" alt="I Am Groot " width="200" height="350"></a></td>
-            <td><a href=""><img src="she hulk.jpg" alt="She Hulk" width="200" height="350"></a></td>
+            <td><a href=""><img src="She-Hulk _ Attorney at Law.jfif" alt="She Hulk" width="200" height="350"></a></td>
 
         </table>
     </body>
